# webauthn-minimal

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile
examples/: gen-types.rs
examples/demo/: main.rs
examples/demo/frontend/: index.html  package-lock.json  package.json  tsconfig.json
examples/demo/frontend/src/: main.tsx  style.css  types.ts
examples/demo/static/: auth.html  auth.js
examples/demo/ts/: auth.ts
src/: lib.rs
ts/: index.ts  package.json
