[package]
name = "webauthn-minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
ciborium = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
ts-rs = "12"

[dev-dependencies]
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
